<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.11</version>
		<relativePath/> 
	</parent>

	<groupId>com.example</groupId>
	<artifactId>agile-re-tool</artifactId>

	<properties>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  		<maven.compiler.release>21</maven.compiler.release>
  		<javafx.version>21.0.2</javafx.version>
		<java.version>21</java.version>

        <javafx.platform>win</javafx.platform>
	</properties>

	<version>0.0.1-SNAPSHOT</version>
	<name>AgileRequirementsEngineeringTool</name>
	<description>AgileRequirementsEngineeringTool</description>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
  			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>com.example.agile_re_tool.backend.BackendApplication</mainClass>
				</configuration>
			</plugin>

		</plugins>
	</build>

  <profiles>
    <profile>
      <id>uc03-ui</id>
      <activation/>
      <properties>
        <javafx.version>21.0.2</javafx.version>
      </properties>

      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>2.2.224</version>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>
      </dependencies>

      <build>
        <plugins>
          <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
              <mainClass>com.example.agile_re_tool.UC03CreateUserStory</mainClass>
              <launcher>exec</launcher>
              <options>
                <option>--add-modules=javafx.controls,javafx.fxml,javafx.graphics</option>
              </options>
              <systemPropertyVariables>
                <javafx.platform>${javafx.platform}</javafx.platform>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>

    </profile>

    <profile>
      <id>uc04-ui</id>
      <activation/>
      <properties>
        <javafx.version>21.0.2</javafx.version>
      </properties>

      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>2.2.224</version>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>${javafx.version}</version>
          <classifier>${javafx.platform}</classifier>
        </dependency>
      </dependencies>

      <build>
        <plugins>
          <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
              
              <mainClass>com.example.agile_re_tool.UC04EditUserStory</mainClass>
              <launcher>exec</launcher>
              <options>
                <option>--add-modules=javafx.controls,javafx.fxml,javafx.graphics</option>
              </options>
              <systemPropertyVariables>
                <javafx.platform>${javafx.platform}</javafx.platform>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>

    </profile>
  </profiles>
</project>
